# RayTracing_TheNextWeek

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RayTracingTheNextWeek.cpp  ReadMe.md  generate_mac.sh  generate_win.bat
include/: camera.h  hitable.h  hitable_list.h  material.h  movingSphere.h  progress.h  ray.h  rtweekend.h  sphere.h  vec3.h
